refactor(change-tracking): 优化变更路径语义和循环引用处理
改进 Change 接口的 path() 方法文档，明确在扁平视图中返回完整
路径，在树形视图中返回相对路径。实现确定性的默认 Provider 选择
策略，优先选择 'default-reflection'。修复 ValueNodeComparisonStrategy
中的循环引用问题，添加 VisitingPair 和 PositionalIdentity 辅助类
进行循环检测。改进集合项匹配逻辑，支持重复值和 Null 元素的正确
识别。更新 ValueNodeSnapshotStrategy 以支持自引用结构的快照创建。